[package]
name = "core_ux"
version = "0.1.3"
authors = ["DUTILLEUL Quentin<quentindutilleul@pm.me>"]

description = "no_std implementation of the non-standard types u/i1..=63"

license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/Quentincestino/core_uX.git"


keywords = ["integer", "unaligned", "misaligned"]
categories = ["embedded", "no-std", "data-structures"]


[dependencies]

[badges]
travis-ci = {repository = "kjetilkjeka/uX", branch = "master"}
maintenance = {status = "actively-developed"}